force-app/main/default/objects/Invoice_Setting__mdt/Invoice_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Invoice Setting</label>
    <pluralLabel>Invoice Settings</pluralLabel>
</CustomObject>