force-app/main/default/objects/Invoice_Setting__mdt/fields/Default_Due_Date_Offset__c.field-meta.xml
<CustomField>
    <fullName>Default_Due_Date_Offset__c</fullName>
    <label>Default Due Date Offset</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>