force-app/main/default/objects/Invoice_Setting__mdt/fields/Invoiced_Status__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_Status__c</fullName>
    <label>Invoiced Status</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>